4.42.1 (not released):
  - Can execute yq expression files directly with shebang (#1851)

4.41.1:
  - Can now comment in yq expressions! #1919
  - Fixed Toml decoding when table array defined before parent #1922
  - Added new CSV option to turn off auto-parsing #1947
  - Fixing with_entries context #1925
  - Can now retrieve the alias names of merge anchors #1942


4.40.7:
  - Bumped dependencies

4.40.6:
  - Fix: empty TOML table #1924 - Thanks @elibroftw 
  - Fixed "all" error message #1845
  - Fixed to_entries[]
  - Bumped dependencies

4.40.5:
  - Fixing seg fault on bad XML #1888
  - Fixed handling of --- #1890, #1896
  - Bumped dependencies

4.40.4:
  - Fixed bug with creating maps with values based off keys #1886, #1889
  - Bumped dependencies

4.40.3: 
  - Fixed JSON output issue with empty arrays #1880

4.40.2:
  - Do not panic when StdIn is closed (#1867) Thanks @aleskandro!
  - Fixed issue when update against self #1869
  - Fixed multi doc anchor bug #1861
  - Fixes doc line separator issue when reading expression file #1860
  - Bumped dependencies

4.40.1:
  - Added tonumber support (#1664, #71)
  - Added kind operator
  - Lua output fixes (#1811) - Thanks @Zash!
  - Add support for Lua input (#1810) - Thanks @Zash!
  - Rewrote parsing engine - yq now has its own AST!
  - Bumped dependencies

4.35.2:
  - Fix various typos #1798
  - Fixed number parsing as float bug in JSON #1756
  - Fixed string, null concatenation consistency #1712
  - Fixed expression parsing issue #1711
  - Bumped dependencies

4.35.1:
  - Added Lua output support (Thanks @Zash)!
  - Added BSD checksum format (Thanks @viq)!
  - Bumped dependencies

4.34.2:
  - Bumped dependencies


4.34.1:
  - Added shell output format thanks @giorgiga
  - Fixed nil pointer dereference (#1649) thanks @ArthurFritz
  - Bumped dependency versions

4.33.3:
  - Fixed bug when splatting empty array #1613
  - Added scalar output for TOML (#1617)